dshop/static/dshop/css/dmodules.css
html{
  background-color:#202325;
}
body{
  background-color:#fbfbfb;
  min-width:300px;
}

main > .container > .row {
    align-items: center;
}

@media (min-width: 1200px) {
    .container {
        max-width: 1400px;
        padding-left: 30px;
        padding-right: 30px;
    }
}

/* ===--- Topnav ---=== */
.topnav{
  background-color:#202325;
  color:#fff;
  font-size:20px;
  line-height:46px;
  vertical-align:middle;
  height:46px;
  position:fixed;
  top:0;
  left:0;
  right:0;
  z-index:1042;
  padding:0 1rem;
}
.topnav .col-6{
  padding:0;
}
.topnav a,
.topnav .drawer-toggle{
  color:#fff;
  position: relative;
  cursor: pointer;
  padding:0 1rem;
}
.topnav a:hover,
.topnav .drawer-toggle:hover{
  color:#41b6e6;
}
.topnav .notif{
  font-size:1rem;
  font-weight:500;
  line-height:100%;
  text-align:center;
  text-overflow:ellipsis;
  white-space:nowrap;
  overflow:hidden;
  display:inline-block;
  width:100%;
}

/* ===--- Drawer ---=== */
.drawer-toggle #dm-cart-items{
  background-color: #41b6e6;
  border-radius: 100%;
  color: #fff;
  font-size: 10px;
  line-height: 100%;
  text-align: center;
  display: none;
  min-width: 16px;
  min-height: 16px;
  position: absolute;
  top: 11px;
  right: 8px;
  padding: 4px;
}
.dm-drawer{
  position:absolute;
  z-index:2000;
}
.drawer-nav.dm-panel-user .drawer-menu.dm-drawer-cart,
.drawer-nav.dm-panel-user .drawer-menu.dm-drawer-soumission{
  display:none;
}
.drawer-nav.dm-panel-cart .drawer-menu.dm-drawer-user,
.drawer-nav.dm-panel-cart .drawer-menu.dm-drawer-soumission{
  display:none;
}
.drawer-nav.dm-panel-soumission .drawer-menu.dm-drawer-user,
.drawer-nav.dm-panel-soumission .drawer-menu.dm-drawer-cart{
  display:none;
}
@media (min-width:992px) {
  .drawer--right .drawer-nav{
    right:-340px;
  }
  .drawer--right.drawer-open .drawer-hamburger{
    right:340px;
  }
  .drawer-nav{
    width:340px;
  }
}
@media (max-width:991px) {
  .drawer--right .drawer-nav{
    right:-50vw;
  }
  .drawer--right.drawer-open .drawer-hamburger{
    right:50vw;
  }
  .drawer-nav{
    width:50vw;
  }
}
@media (max-width:575px) {
  .drawer--right .drawer-nav{
    right:calc(-100vw + 111px);
  }
  .drawer--right.drawer-open .drawer-hamburger{
    right:calc(100vw - 111px);
  }
  .drawer-nav{
    width:calc(100vw - 111px);
  }
}
.drawer-menu{
  color:#758987;
  position:absolute;
  top:0;
  left:0;
  right:0;
  bottom:0;
}
.dm-drawer-inner{
  text-align:center;
  overflow-y:auto;
  position:absolute;
  top:0;
  left:0;
  right:0;
  bottom:181px;
  padding:1.2rem 1rem 1rem;
}
.dm-drawer-bottom{
  text-align:center;
  position:absolute;
  left:0;
  right:0;
  bottom:0;
  padding:1rem;
}
.dm-drawer-inner .drawer-title{
  border-bottom:1px solid rgba(150, 140, 173, 0.3);
  font-size:20px;
  line-height:120%;
  text-align:left;
  padding:0 0 15px;
  margin:0 0 32px;
}
.dm-drawer-inner .drawer-title .drawer-count{
  font-size:16px;
  font-weight:400;
  line-height:120%;
}
.dm-drawer-inner #drawer-items-list ul{
  list-style:none;
}
.dm-drawer-inner #drawer-items-list li,
.dm-drawer-inner #drawer-soumission-list li{
  padding:1rem 0;
}
.dm-drawer-inner #drawer-items-list li + li,
.dm-drawer-inner #drawer-soumission-list li + li{
  border-top:1px solid rgba(150, 140, 173, 0.2);
}
.dm-drawer-inner #drawer-items-list .media img,
.dm-drawer-inner #drawer-soumission-list .media img{
  max-width:100%;
  height:auto;
}
.dm-drawer-inner #drawer-items-list .media-body,
.dm-drawer-inner #drawer-soumission-list .media-body{
  display:none;
}
.dm-drawer-inner #drawer-items-list .col-8 a,
.dm-drawer-inner #drawer-soumission-list .col-8 a{
  color:#41b6e6;
  font-size:1.1rem;
  font-weight:800;
  line-height:120%;
  text-overflow:ellipsis;
  overflow:hidden;
  display:inline-block;
  max-width:100%;
  transition:color 0.3s;
}
.dm-drawer-inner #drawer-items-list a:hover,
.dm-drawer-inner #drawer-soumission-list a:hover{
  color:#000;
}
.dm-drawer-inner #drawer-items-list .drawer-cart-attributes {
    font-size: 0.8rem;
    margin: 0 0 0.5rem;
}
.dm-drawer-total{
  background-color:#41b6e6;
  color:#fff;
  font-size:0;
  line-height:0;
  padding:18px 30px;
  margin:1rem 0;
}
.dm-drawer-total span{
  font-size:16px;
  font-weight:700;
  line-height:120%;
  text-align:left;
  display:inline-block;
  width:50%;
}
.dm-drawer-total span + span{
  font-size:20px;
  text-align:right;
}
.dm-drawer-inner #drawer-items-list a.dm-item-delete,
.dm-drawer-inner #drawer-soumission-list a.dm-item-delete{
  color:#41b6e6;
  position:absolute;
  top:0;
  right:-18px;
  padding:2px 10px;
}
.dm-drawer-inner #drawer-items-list a.dm-item-delete:hover,
.dm-drawer-inner #drawer-soumission-list a.dm-item-delete:hover{
  color:#000;
}
.dm-drawer-user-logs .default-input{
  width:100%;
  margin:0 0 1rem;
}
.dm-drawer-user-tabs{
  font-size:0;
  line-height:0;
  margin:0 0 1rem;
}
.dm-drawer-user-tabs > div{
  display:inline-block;
  width:calc(50% - 0.5rem);
  margin:0 0.5rem 0 0;
}
.dm-drawer-user-tabs > div + div{
  margin:0 0 0 0.5rem;
}
.dm-drawer-user-tabs .btn{
  background-color:#41b6e6;
  width:100%;
  min-width:10px;
  padding:30px 5px;
}
.dm-drawer-logs-register{
  display:none;
}
.dm-drawer-logs-login-error,
.dm-drawer-logs-register-error{
  color:#f00;
  margin:1rem 0 2rem;
}
.dm-drawer-user-account .list{
  text-align:left;
  list-style:none;
}
.dm-drawer-user-account .list li{
  border:0;
}
.dm-drawer-user-account .list li + li{
  border-top:1px solid #dad6e3;
}
.dm-drawer-user-account .list li a{
  display:inline-block;
  width:70%;
  padding:1rem;
}
.dm-drawer-user-account .list li a:hover{
  text-decoration:underline;
}

/* ===--- Main Menu ---=== */
.dm-menu-split{
    display:inline-block;
}
.dm-menu-split.dropdown-toggler{
    float:right;
    display:inline-block;
    width:32px;
    height:37px;
    position:absolute;
    top:0;
    right:8px;
}
.dm-menu-split.dropdown-toggler::after{
    right:auto;
    padding:0 8px;
    margin:0;
}
.has-been-ajusted > ul > li > .dropdown-item {
    padding: 3px 11px!important;
}

/* ===--- Section Vedette ---=== */
.section-vedette{
  text-align:center;
}
.section-vedette h2{
  color:#292b2c;
  font-size:2rem;
  font-weight:700;
}

/* ===--- Section Produits par Category ---=== */
.section-parcategorie .tab-content {
    min-height: 400px;
}
.section-parcategorie .tab-content .product_img {
    min-height: 200px;
}
.pbc-loading{
    font-size: 1rem;
}
.pbc-loading span {
    font-size:2rem;
    animation: blink 1.4s infinite both;
}
.pbc-loading span+span {
    animation-delay: .2s;
}
.pbc-loading span+span+span {
    animation-delay: .4s;
}
@keyframes blink {
    0% {opacity: .2;}
    20% {opacity: 1;}
    100% {opacity: .2;}
}

/* ===--- Section Marques ---=== */
.section-products-brands {
    padding: 3rem 0;
}
.section-products-brands .owl-item {
    background-color: #fff;
    display: table;
    height: 300px;
}
.section-products-brands .owl-item > .item {
    vertical-align: middle;
    display: table-cell;
}
.section-products-brands .owl-item .brand img {
    width: auto;
    margin: 0 auto;
}

/**/
.product-card{
  background-color:#fff;
  box-shadow:0 0 7px rgba(0,0,0,0.1);
  margin:5px;
}
.product-card .info{
  text-align:left;
  padding:15px;
}
.product-card .name{
  font-family:'Roboto', sans-serif;
  font-size:1.1rem;
  font-weight:500;
  line-height:120%;
  text-overflow:ellipsis;
  white-space:nowrap;
  overflow:hidden;
  display:block;
  width:100%;
  transition:color 0.3s;
  margin:0 0 1rem;
}
.product-card .name a{
  color:#292b2c;
}
.product-card .name a:hover{
  color:#41b6e6;
}
.product-card .price{
  color:#41b6e6;
  font-weight:600;
}
.product-card .price del{
  color:#292b2c;
  font-size:0.9rem;
  font-weight:400;
  padding:0 0 0 6px;
}

/* ===--- Produit : Page détail ---=== */
.product-detail-unavailable > p {
    border: 1px solid #b52d2d;
    color: #b52d2d;
    font-size: 0.8rem;
    padding: 2px 10px;
    margin: 0;
}

/* ===--- Vos commandes ---=== */
.service-content-box pre{
  border-left:2px solid #41b6e6;
  padding-left:1rem;
}
.order-detail-items-list .item-media,
.order-detail-items-list .item-media > .media,
.order-detail-items-list .item-media > .media > a {
    vertical-align: middle;
    display: inline-block;
    width: 80px;
    height: 80px;
}
.order-detail-items-list .item-media > .media > .media-body {
    display: none;
}
.order-detail-items-list .item-detail {
    vertical-align: middle;
    display: inline-block;
    width: calc(90% - 80px - 1rem);
    margin: 0 0 0 1rem;
}
.order-detail-items-list .item-detail .item-attributes {
    font-size: 0.8rem;
    line-height: 120%;
}

/* ===--- Breadcrumbs ---=== */
.breadcrumbs-item a + a{
  border-left:1px solid #202325;
  padding-left:0.5rem;
  margin-left:0.5rem;
}

/* ===--- Categories ---=== */
.dm-produits-category-submenu{
  display:none;
}

/* ===--- Snackbar ---=== */
#snackbar{
  background-color:rgba(0, 0, 0, 0.9);
  border-radius:6px;
  box-shadow:0 1px 4px rgba(0, 0, 0, 0.5);
  color:#fff;
  font-size:1.1rem;
  line-height:150%;
  display:inline-block;
  width:300px;
  max-width:calc(100% - 2rem);
  position:fixed;
  top:-10%;
  left:1rem;
  right:1rem;
  z-index:99999;
  transition:top 0.4s;
  padding:1rem;
  margin:0 auto
}
#snackbar.show{
  top:10%;
}

